# homecontrol-ui

./: README.md
angular-frontend/: .gitignore  README.md  jest.config.app.ts  nx.json  package-lock.json  package.json  project.json  tsconfig.base.json  tsconfig.editor.json
angular-frontend/auth/: docker-compose.yaml  env-default
angular-frontend/e2e/: playwright.config.ts  project.json
angular-frontend/modules/dashboard/src/: index.ts
angular-frontend/modules/dashboard/src/lib/: dashboard-v1-types.ts  web2mqtt-payload.ts  web2mqtt-watch.ts  widget-type.ts
angular-frontend/modules/dashboard/src/lib/components/container/: container.component.html  container.component.ts
angular-frontend/modules/dashboard/src/lib/components/panel/: panel.component.html  panel.component.ts
angular-frontend/modules/dashboard/src/lib/components/widget/: widget.component.css  widget.component.html  widget.component.ts
angular-frontend/modules/dashboard/src/lib/dashboard/: dashboard.component.html  dashboard.component.ts
angular-frontend/modules/dashboard/src/lib/services/: hc-backend.service.spec.ts  hc-backend.service.ts
angular-frontend/modules/shared/ui/src/: index.ts
angular-frontend/modules/shared/ui/src/lib/: csrf.interceptor.ts
angular-frontend/modules/shared/ui/src/lib/guard/: authenticated.guard.ts
angular-frontend/modules/shared/ui/src/lib/not-found-page/: not-found-page.component.ts
angular-frontend/modules/shared/ui/src/lib/welcome-page/: welcome-page.component.html  welcome-page.component.ts
angular-frontend/modules/shared/ui/src/pages/welcome-page/: welcome-page.component.html  (+1 more)
angular-frontend/modules/shared/ui/src/services/: auth.service.ts  csrftoken.service.ts
angular-frontend/public/: dashboard-example.json  sso.html
angular-frontend/src/: index.html  proxy.conf.json  styles.css
angular-frontend/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  nx-welcome.component.ts
server/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  env-default
server/src/: lib.rs  main.rs  mqtta.rs
server/src/http/: appstate.rs  mod.rs
server/src/http/api/: mod.rs  status.rs  web2mqtt.rs  ws.rs
server/src/mqtta/: actor.rs  handle.rs  message.rs  mod.rs
