[package]
name = "homecontrol-ui-server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros", "tracing", "ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-macros = "0.4.1"
color-eyre = "0.6"
dotenvy = "0.15.7"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
  "std",
] }
headers = "0.4"
hyper = { version = "1.0", features = [] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
rumqttc = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typed-builder = "0.19.1"
